@@ -118,6 +118,13 @@
 #     [NUM] is the number of times the skill must be used
 #     successfully before the achievement is gained.
 #
+# ... EVENT="SOCIALUSE" SOCIALID="[SOCIALID]" NUM=[NUM] ...
+#     [SOCIALID] is the social ID to track (POKE <T-NAME>), or a 
+#     social name (POKE) or target type (<T-NAME>) 
+#     or a comma-delimited list of social IDs or names or targets or *.
+#     [NUM] is the number of times the social must be used
+#     successfully before the achievement is gained.
+#
 # ... EVENT="QUESTOR" QUESTMASK="[QUESTMASK]" PLAYERMASK="[PLAYERMASK]" NUM=[NUM] ...
 #     [QUESTMASK] is optional, but may contain a regular expression to filter out
 #     quests according to their names.
